changed size of images to prevent distortion

--- a/client/src/css/projects.css
+++ b/client/src/css/projects.css
@@ -25,8 +25,11 @@ min-width: 50%;
     text-align: center;
 }
 .projects-image {
+    height: 100%;
+    max-width: 100%;
+}
+.projects-image-container {
     width: 50%;
-    height: auto;
 }
 .project-name {
     font-size: 20px;
